# commiefetch

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  commiefetch  install.sh  pyproject.toml
.github/workflows/: publish.yml
aur/: .SRCINFO  PKGBUILD  PKGBUILD-git
configs/: china-config.toml  example-config.json  soviet-config.toml
src/commiefetch/: __init__.py  cli.py  colors.py  config.py  logos.py  modules.py
