[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commiefetch"
version = "1.2.1"
description = "Communist-themed system information tool — like neofetch, but red"
readme = "README.md"
authors = [
    {name = "commiefetch contributors"},
]
license = "GPL-3.0-only"
requires-python = ">=3.8"
keywords = ["system-info", "neofetch", "communist", "fastfetch", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.scripts]
commiefetch = "commiefetch.cli:main"

[project.urls]
Source = "https://github.com/amalxloop/commiefetch"
Tracker = "https://github.com/amalxloop/commiefetch/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
commiefetch = ["py.typed"]
